fixed issue about extra space with html.

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -21,8 +21,10 @@ body{
   margin: 0;
   padding: 0;
 }
-
-
+a{
+  text-decoration: none;
+  color: white;
+}
 
 .header {
   margin: 0 auto;
@@ -33,8 +35,8 @@ body{
 }
 
 #logo{
-  transform: translate(0%, 0%);
-  /* margin: 0 50%; */
+  transform: translate(-50%, 0%);
+  margin: 0 50%;
   width: 200px;
   height: 200px;
 }
@@ -52,10 +54,6 @@ body{
 
 .title-span{
   font-size: 3em;
-}
-a{
-  text-decoration: none;
-  color: white;
 }
 
 .see-mattress-btn{
